# web_agent

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.yaml  guardrails.md  pyproject.toml  question.txt  requirements.txt  test.md  web_agent.py  web_agent_client.py  web_agent_server.py  web_agent_setup.py  web_agent_ui.py
docs/: PROJECT.md  todo-web_agent.txt
skills/google-search/: SKILL.md
trash/: _78c312fde2  _ef5ef65385.js  abs.twimg.com_00bf3ca149.js  abs.twimg.com_0d0765cf71.js  abs.twimg.com_11e70727b4.js  abs.twimg.com_15f64f1f95.js  abs.twimg.com_187057117a.js  abs.twimg.com_18d5533296.js  abs.twimg.com_1b444435f9.js  abs.twimg.com_2257a3c5a8.js  abs.twimg.com_2602c73936.js  abs.twimg.com_2b80e26c5b.js  abs.twimg.com_2d6cd404d1.js  abs.twimg.com_37f2d3260f.js  abs.twimg.com_38960a97b1.js  abs.twimg.com_38c69520d1.js  abs.twimg.com_3ac3187edc.js  abs.twimg.com_3acaceea60.js  abs.twimg.com_3c4b6d5e07.js  abs.twimg.com_3d711f9b41.js  abs.twimg.com_41c3467eca.js  abs.twimg.com_42163e0de3.js  abs.twimg.com_44f9e76acc.js  abs.twimg.com_4694dd964b.js  abs.twimg.com_469d2263f4.js  abs.twimg.com_4914a3bec8.js  abs.twimg.com_4c24415691.js  abs.twimg.com_4d9692df2f.js  abs.twimg.com_4ea2a193ad.js  abs.twimg.com_51e7c804d2.js  abs.twimg.com_529e7c23d2.js  abs.twimg.com_5499390bbc.js  abs.twimg.com_5fa4f66d1a.js  abs.twimg.com_617dd98317.js  abs.twimg.com_6234eabf1d.js  abs.twimg.com_66064da932.js  abs.twimg.com_68ccc7badb.js  abs.twimg.com_71161cc92c.js  abs.twimg.com_7b51e5ff5d.js  abs.twimg.com_7f054e7264.js  (+274 more)
web_agent/: __init__.py  __main__.py  main.py
(+35 files in other folders)
